@@ -1,693 +1,528 @@
 package ru.practicum.explore.event.service;
 
-import jakarta.persistence.EntityNotFoundException;
+import com.querydsl.core.types.dsl.BooleanExpression;
 import jakarta.servlet.http.HttpServletRequest;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.data.domain.Page;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import ru.practicum.explore.category.model.Category;
 import ru.practicum.explore.category.repository.CategoryRepository;
-import ru.practicum.explore.client.StatClient;
-import ru.practicum.explore.common.exception.BadRequestException;
-import ru.practicum.explore.common.exception.ConflictException;
-import ru.practicum.explore.common.exception.NotFoundException;
-import ru.practicum.explore.dto.StatDto;
-import ru.practicum.explore.event.dto.EventDto;
-import ru.practicum.explore.event.dto.NewEventDto;
-import ru.practicum.explore.event.dto.PatchEventDto;
-import ru.practicum.explore.event.dto.ResponseEventDto;
-import ru.practicum.explore.event.mapper.EventMapperNew;
+import ru.practicum.explore.event.dto.*;
+import ru.practicum.explore.event.enums.State;
+import ru.practicum.explore.event.enums.StateAction;
+import ru.practicum.explore.event.mapper.EventMapper;
 import ru.practicum.explore.event.model.Event;
-import ru.practicum.explore.event.model.Location;
-import ru.practicum.explore.event.model.ParticipationRequest;
+import ru.practicum.explore.event.model.QEvent;
 import ru.practicum.explore.event.repository.EventRepository;
-import ru.practicum.explore.event.repository.LocationRepository;
-import ru.practicum.explore.event.repository.ParticipationRequestRepository;
-import ru.practicum.explore.global.dto.SortValues;
-import ru.practicum.explore.global.dto.Statuses;
+import ru.practicum.explore.exception.*;
+import ru.practicum.explore.request.dto.RequestDto;
+import ru.practicum.explore.request.enums.Status;
+import ru.practicum.explore.request.mapper.RequestMapper;
+import ru.practicum.explore.request.model.Request;
+import ru.practicum.explore.request.repository.RequestRepository;
+import ru.practicum.explore.request.service.RequestService;
+import ru.practicum.explore.stats.client.StatClient;
+import ru.practicum.explore.dto.EndHitDto;
+import ru.practicum.explore.dto.StatDto;
 import ru.practicum.explore.user.model.User;
 import ru.practicum.explore.user.repository.UserRepository;
 
 import java.time.LocalDateTime;
-import java.time.format.DateTimeFormatter;
-import java.time.temporal.ChronoUnit;
 import java.util.*;
-import java.util.concurrent.ConcurrentHashMap;
-import java.util.stream.Collectors;
 
 @Service
+@Transactional(readOnly = true)
 @RequiredArgsConstructor
 @Slf4j
-@Transactional(readOnly = true)
 public class EventServiceImpl implements EventService {
 
-    private final UserRepository userRepository;
     private final EventRepository eventRepository;
+
     private final CategoryRepository categoryRepository;
-    private final LocationRepository locationRepository;
-    private final ParticipationRequestRepository participationRequestRepository;
-    private final StatClient statsClient;
-    private static final Map<Long, Set<String>> VIEWS_IP_CACHE = new ConcurrentHashMap<>();
 
-    @Override
-    public EventDto getEventById(long userId, long eventId) {
-        return eventRepository
-                .findByIdAndInitiatorId(eventId, userId)
-                .map(EventMapperNew::mapToEventDto)
-                .orElseThrow(() ->
-                        new NotFoundException(
-                                "Event id=" + eventId + " not found for user " + userId));
-    }
+    private final UserRepository userRepository;
+
+    private final RequestRepository requestRepository;
+
+    private final RequestService requestService;
+
+    private final StatClient statClient;
+
+    @Value("${ewmServiceName}")
+    private String serviceName;
 
     @Override
     @Transactional
-    public EventDto getPublishedEventById(long eventId) {
-        Event event = eventRepository.findByIdAndState(eventId, Statuses.PUBLISHED.name())
-                .orElseThrow(EntityNotFoundException::new);
-
-        long views = fetchViews("/events/" + eventId, false);
-        event.setViews(views);
-        eventRepository.save(event);
-
-        return EventMapperNew.mapToEventDto(event);
+    public EventFullDto addEvent(NewEventDto eventDto, Long userId) {
+        checkFields(eventDto);
+        Category category = categoryRepository.findById(eventDto.getCategory())
+                .orElseThrow(() -> new NotFoundException("Категория не найдена"));
+        User user = userRepository.findById(userId).orElseThrow(() -> new NotFoundException("Пользователь не найден"));
+        if (eventDto.getCommenting() == null) {
+            eventDto.setCommenting(true);
+        }
+        Event event = eventRepository.save(EventMapper.mapToEvent(eventDto, category, user));
+        return EventMapper.mapToFullDto(event, 0L);
     }
 
     @Override
-    public Collection<ResponseEventDto> getAllUserEvents(long userId,
-                                                         Integer from,
-                                                         Integer size) {
-        PageRequest pageRequest = createPageRequest(from, size);
-        Page<Event> eventsPage = eventRepository.findByInitiatorId(userId, pageRequest);
+    public List<EventShortDto> getEventsOfUser(Long userId, Integer from, Integer size) {
+        if (!userRepository.existsById(userId)) {
+            throw new NotFoundException("Пользователь не найден");
+        }
 
-        return eventsPage.getContent()
+        Sort sortByCreatedDate = Sort.by("createdOn");
+        PageRequest pageRequest = PageRequest.of(from / size, size, sortByCreatedDate);
+        List<Event> events = eventRepository.findAllByInitiatorId(userId, pageRequest);
+
+        List<String> urisList = events
                 .stream()
-                .map(EventMapperNew::mapToResponseEventDto)
-                .collect(Collectors.toList());
+                .map(event -> "/events/" + event.getId())
+                .toList();
+
+
+        List<StatDto> statsList = statClient.getStats(events.getFirst().getCreatedOn().minusSeconds(1),
+                LocalDateTime.now(), urisList, false);
+
+        return events.stream().map(event -> {
+                    Optional<StatDto> result = statsList.stream()
+                            .filter(statsDto -> statsDto.getUri().equals("/events/" + event.getId()))
+                            .findFirst();
+                    if (result.isPresent()) {
+                        return EventMapper.mapToShortDto(event, result.get().getHits());
+                    } else {
+                        return EventMapper.mapToShortDto(event, 0L);
+                    }
+                })
+                .toList();
     }
 
     @Override
-    @Transactional
-    public ResponseEventDto changeEvent(long userId,
-                                        long eventId,
-                                        PatchEventDto patch) {
-
-        Event stored = eventRepository
-                .findByIdAndInitiatorId(eventId, userId)
-                .orElseThrow(EntityNotFoundException::new);
-// Проверка, что событие не опубликовано
-        if (Statuses.PUBLISHED.name().equals(stored.getState())) {
-            throw new ConflictException("Нельзя изменять опубликованное событие");
+    public EventFullDto getEventOfUser(Long userId, Long eventId) {
+        if (!userRepository.existsById(userId)) {
+            throw new NotFoundException("Пользователь не найден");
         }
-
-        if (patch.getStatus() != null && "REJECTED".equals(patch.getStatus())) {
-            List<ParticipationRequest> confirmedRequests = participationRequestRepository
-                    .findByEventIdAndStatus(eventId, "CONFIRMED");
-
-            if (!confirmedRequests.isEmpty()) {
-                throw new ConflictException("Нельзя отклонить уже подтверждённые заявки");
-            }
+        Event event = eventRepository.findById(eventId).orElseThrow(() -> new NotFoundException("Событие не найдено"));
+        if (!Objects.equals(event.getInitiator().getId(), userId)) {
+            throw new ValidationException("Можно просмотреть только своё событие");
         }
-
-        // Проверка даты события
-        if (patch.getEventDate() != null) {
-            validateFutureDate(patch.getEventDate());
-        }
-
-        // Обработка заявок на участие (если есть requestIds)
-        if (patch.getRequestIds() != null && !patch.getRequestIds().isEmpty()) {
-            // Получаем все заявки по переданным ID
-            List<ParticipationRequest> requests = participationRequestRepository.findAllByIdIn(patch.getRequestIds());
-
-            // Проверяем, что все заявки принадлежат этому событию
-            requests.forEach(request -> {
-                if (!request.getEvent().getId().equals(eventId)) {
-                    throw new ConflictException("Заявка " + request.getId() + " не принадлежит событию " + eventId);
-                }
-            });
-
-            // Если пытаемся отклонить заявки
-            if ("REJECTED".equals(patch.getStatus())) {
-                // Проверяем, есть ли среди них подтверждённые
-                boolean hasConfirmed = requests.stream()
-                        .anyMatch(req -> "CONFIRMED".equals(req.getStatus()));
-
-                if (hasConfirmed) {
-                    throw new ConflictException("Нельзя отклонить уже подтверждённые заявки");
-                }
-
-                // Обновляем статус заявок
-                requests.forEach(req -> req.setStatus("REJECTED"));
-                participationRequestRepository.saveAll(requests);
-            }
-        }
-
-        if (patch.getEventDate() != null) {
-            validateFutureDate(patch.getEventDate());
-        }
-
-        Category category = null;
-        if (patch.getCategory() != null) {
-            category = categoryRepository
-                    .findById(patch.getCategory())
-                    .orElseThrow(() -> new NotFoundException("Category not found"));
-        }
-
-        Location location = null;
-        if (patch.getLocation() != null) {
-            location = locationRepository
-                    .saveAndFlush(EventMapperNew.mapToLocation(patch.getLocation()));
-        }
-
-        Event updated = EventMapperNew.changeEvent(stored, patch);
-
-        if (category != null) {
-            updated.setCategory(category);
-        }
-        if (location != null) {
-            updated.setLocation(location);
-        }
-
-        applyStateAction(patch.getStateAction(), stored.getState(), updated);
-
-        return EventMapperNew
-                .mapToResponseEventDto(eventRepository.saveAndFlush(updated));
-    }
-
-    @Override
-    @Transactional
-    public EventDto createEvent(long userId, PatchEventDto dto) {
-
-        Category category = categoryRepository
-                .findById(dto.getCategory())
-                .orElseThrow(() -> new NotFoundException("Category not found"));
-        User user = userRepository
-                .findById(userId)
-                .orElseThrow(() -> new NotFoundException("User not found"));
-
-        Event event = new Event();
-        EventMapperNew.changeEvent(event, dto);
-
-        Location location = locationRepository
-                .saveAndFlush(EventMapperNew.mapToLocation(dto.getLocation()));
-
-        event.setLocation(location);
-        event.setCategory(category);
-        event.setInitiator(user);
-        event.setViews(0L);
-
-        return EventMapperNew.mapToEventDto(eventRepository.saveAndFlush(event));
-    }
-
-    @Override
-    @Transactional
-    public EventDto getPublishedEventById(long eventId, Integer views) {
-        Event event = eventRepository
-                .findByIdAndState(eventId, Statuses.PUBLISHED.name())
-                .orElseThrow(EntityNotFoundException::new);
-
-        event.setViews(Long.valueOf(views));
-        return EventMapperNew.mapToEventDto(eventRepository.saveAndFlush(event));
-    }
-
-    @Override
-    public Collection<ResponseEventDto> findEventsByUser(String text,
-                                                         List<Long> categories,
-                                                         Boolean paid,
-                                                         LocalDateTime rangeStart,
-                                                         LocalDateTime rangeEnd,
-                                                         Boolean onlyAvailable,
-                                                         String sort,
-                                                         Integer from,
-                                                         Integer size) {
-
-        String qText = text == null ? "" : text.trim();
-        boolean byText = !qText.isBlank();
-        boolean byCats = categories != null && !categories.isEmpty();
-        List<Long> cats = byCats ? categories : List.of();
-        boolean isPaid = Boolean.TRUE.equals(paid);
-        boolean onlyAvail = Boolean.TRUE.equals(onlyAvailable);
-
-        int pageFrom = from == null ? 0 : from;
-        int pageSize = (size == null || size <= 0) ? 10 : size;
-        PageRequest page = PageRequest.of(pageFrom / pageSize, pageSize);
-
-        LocalDateTime start = rangeStart != null ? rangeStart : LocalDateTime.now();
-        LocalDateTime end = rangeEnd != null ? rangeEnd : start.plusYears(100);
-
-        List<ResponseEventDto> result = new ArrayList<>();
-
-        if (byText) {
-            if (!cats.isEmpty()) {
-                if (onlyAvail) {
-                    if (isPaid) {
-                        result.addAll(EventMapperNew.mapToResponseEventDto(
-                                eventRepository
-                                        .findPaidWithLimitStateTextAndCategory(
-                                                true, start, end,
-                                                Statuses.PUBLISHED.name(),
-                                                qText, qText, cats, page)));
-                    } else {
-                        result.addAll(EventMapperNew.mapToResponseEventDto(
-                                eventRepository
-                                        .findLimitStateTextAndCategory(
-                                                start, end,
-                                                Statuses.PUBLISHED.name(),
-                                                qText, qText, cats, page)));
-                    }
-                } else {
-                    if (isPaid) {
-                        result.addAll(EventMapperNew.mapToResponseEventDto(
-                                eventRepository
-                                        .findPaidStateTextAndCategory(
-                                                true, start, end,
-                                                Statuses.PUBLISHED.name(),
-                                                qText, qText, cats, page)));
-                    } else {
-                        result.addAll(EventMapperNew.mapToResponseEventDto(
-                                eventRepository
-                                        .findStateTextAndCategory(
-                                                start, end,
-                                                Statuses.PUBLISHED.name(),
-                                                qText, qText, cats, page)));
-                    }
-                }
-
-            } else {
-                if (onlyAvail) {
-                    if (isPaid) {
-                        result.addAll(EventMapperNew.mapToResponseEventDto(
-                                eventRepository
-                                        .findPaidWithLimitStateText(
-                                                true, start, end,
-                                                Statuses.PUBLISHED.name(),
-                                                qText, qText, page)));
-                    } else {
-                        result.addAll(EventMapperNew.mapToResponseEventDto(
-                                eventRepository
-                                        .findLimitStateText(
-                                                start, end,
-                                                Statuses.PUBLISHED.name(),
-                                                qText, qText, page)));
-                    }
-                } else {
-                    if (isPaid) {
-                        result.addAll(EventMapperNew.mapToResponseEventDto(
-                                eventRepository
-                                        .findPaidStateText(
-                                                true, start, end,
-                                                Statuses.PUBLISHED.name(),
-                                                qText, qText, page)));
-                    } else {
-                        result.addAll(EventMapperNew.mapToResponseEventDto(
-                                eventRepository
-                                        .findStateText(
-                                                start, end,
-                                                Statuses.PUBLISHED.name(),
-                                                qText, qText, page)));
-                    }
-                }
-            }
-
+        String uri = "/events/" + eventId;
+        List<StatDto> statsList = statClient.getStats(event.getCreatedOn().minusSeconds(1), LocalDateTime.now(), List.of(uri),
+                false);
+        Optional<StatDto> result = statsList.stream().findFirst();
+        if (result.isPresent()) {
+            return EventMapper.mapToFullDto(event, result.get().getHits());
         } else {
+            return EventMapper.mapToFullDto(event, 0L);
+        }
+    }
 
-            if (!cats.isEmpty()) {
-                if (onlyAvail) {
-                    if (isPaid) {
-                        result.addAll(EventMapperNew.mapToResponseEventDto(
-                                eventRepository
-                                        .findPaidWithLimitStateCategory(
-                                                true, start, end,
-                                                Statuses.PUBLISHED.name(),
-                                                cats, page)));
-                    } else {
-                        result.addAll(EventMapperNew.mapToResponseEventDto(
-                                eventRepository
-                                        .findLimitStateCategory(
-                                                start, end,
-                                                Statuses.PUBLISHED.name(),
-                                                cats, page)));
-                    }
-                } else {
-                    if (isPaid) {
-                        result.addAll(EventMapperNew.mapToResponseEventDto(
-                                eventRepository
-                                        .findPaidStateCategory(
-                                                true, start, end,
-                                                Statuses.PUBLISHED.name(),
-                                                cats, page)));
-                    } else {
-                        result.addAll(EventMapperNew.mapToResponseEventDto(
-                                eventRepository
-                                        .findStateCategory(
-                                                start, end,
-                                                Statuses.PUBLISHED.name(),
-                                                cats, page)));
-                    }
-                }
+    @Override
+    @Transactional
+    public EventFullDto updateEventOfUser(UpdateEventUserRequest updateRequest, Long userId, Long eventId) {
+        if (!userRepository.existsById(userId)) {
+            throw new NotFoundException("Пользователь не найден");
+        }
+        Event event = eventRepository.findById(eventId).orElseThrow(() -> new NotFoundException("Событие не найдено"));
+        if (!Objects.equals(event.getInitiator().getId(), userId)) {
+            throw new ValidationException("Можно просмотреть только своё событие");
+        }
 
-            } else {
-                if (onlyAvail) {
-                    if (isPaid) {
-                        result.addAll(EventMapperNew.mapToResponseEventDto(
-                                eventRepository
-                                        .findPaidWithLimitState(
-                                                true, start, end,
-                                                Statuses.PUBLISHED.name(),
-                                                page)));
-                    } else {
-                        result.addAll(EventMapperNew.mapToResponseEventDto(
-                                eventRepository
-                                        .findLimitState(
-                                                start, end,
-                                                Statuses.PUBLISHED.name(),
-                                                page)));
-                    }
-                } else {
-                    if (isPaid) {
-                        result.addAll(EventMapperNew.mapToResponseEventDto(
-                                eventRepository
-                                        .findPaidState(
-                                                true, start, end,
-                                                Statuses.PUBLISHED.name(),
-                                                page)));
-                    } else {
-                        result.addAll(EventMapperNew.mapToResponseEventDto(
-                                eventRepository
-                                        .findState(
-                                                start, end,
-                                                Statuses.PUBLISHED.name(),
-                                                page)));
-                    }
-                }
+        if (event.getState() == State.PUBLISHED) {
+            throw new ConflictDataException("Нельзя изменить опубликованное событие");
+        }
+
+        if (updateRequest.getAnnotation() != null && !updateRequest.getAnnotation().isBlank()) {
+            event.setAnnotation(updateRequest.getAnnotation());
+        }
+        if (updateRequest.getCategory() != null) {
+            Category category = categoryRepository.findById(updateRequest.getCategory())
+                    .orElseThrow(() -> new NotFoundException("Категория не найдена"));
+            event.setCategory(category);
+        }
+        if (updateRequest.getDescription() != null && !updateRequest.getDescription().isBlank()) {
+            event.setDescription(updateRequest.getDescription());
+        }
+        if (updateRequest.getEventDate() != null) {
+            if (updateRequest.getEventDate().isBefore(LocalDateTime.now().plusHours(2))) {
+                throw new ValidationException("Дата начала события должна быть позже чем через 2 часа от текущего" +
+                        " времени");
+            }
+            event.setEventDate(updateRequest.getEventDate());
+        }
+        if (updateRequest.getLocation() != null) {
+            event.setLat(updateRequest.getLocation().getLat());
+            event.setLon(updateRequest.getLocation().getLon());
+        }
+        if (updateRequest.getPaid() != null) {
+            event.setPaid(updateRequest.getPaid());
+        }
+        if (updateRequest.getCommenting() != null) {
+            event.setCommenting(updateRequest.getCommenting());
+        }
+        if (updateRequest.getParticipantLimit() != null) {
+            event.setParticipantLimit(updateRequest.getParticipantLimit());
+        }
+        if (updateRequest.getRequestModeration() != null) {
+            event.setRequestModeration(updateRequest.getRequestModeration());
+        }
+        if (updateRequest.getTitle() != null && !updateRequest.getTitle().isBlank()) {
+            event.setTitle(updateRequest.getTitle());
+        }
+        if (updateRequest.getStateAction() != null) {
+            if (updateRequest.getStateAction() == StateAction.SEND_TO_REVIEW) {
+                event.setState(State.PENDING);
+            } else if (updateRequest.getStateAction() == StateAction.CANCEL_REVIEW) {
+                event.setState(State.CANCELED);
             }
         }
 
-        for (ResponseEventDto dto : result) {
-            dto.setViews(fetchViews("/events/" + dto.getId(), false));
+        return EventMapper.mapToFullDto(event, 0L);
+    }
+
+    @Override
+    public List<EventShortDto> getPublicEventsByFilter(HttpServletRequest httpServletRequest,
+                                                       EventPublicFilter inputFilter) {
+        PageRequest pageRequest = PageRequest.of(inputFilter.getFrom() / inputFilter.getSize(),
+                inputFilter.getSize());
+
+        inputFilter.setText("%" + inputFilter.getText().trim() + "%");
+
+        BooleanExpression conditions = QEvent.event.annotation.likeIgnoreCase(inputFilter.getText())
+                .or(QEvent.event.description.likeIgnoreCase(inputFilter.getText()))
+                .and(QEvent.event.state.in(State.PUBLISHED));
+        if (inputFilter.getCategories() != null) {
+            conditions = conditions.and(QEvent.event.category.id.in(inputFilter.getCategories()));
+        }
+        if (inputFilter.getPaid() != null) {
+            conditions.and(QEvent.event.paid.eq(inputFilter.getPaid()));
+        }
+        if (inputFilter.getRangeStart() != null && inputFilter.getRangeEnd() != null) {
+            conditions = conditions.and(QEvent.event.eventDate.after(inputFilter.getRangeStart()))
+                    .and(QEvent.event.eventDate.before(inputFilter.getRangeEnd()));
+        } else {
+            conditions = conditions.and(QEvent.event.eventDate.after(LocalDateTime.now()));
+        }
+        if (inputFilter.getOnlyAvailable()) {
+            conditions = conditions.and(QEvent.event.confirmedRequests.loe(QEvent.event.participantLimit));
+        }
+        List<Event> events = eventRepository.findAll(conditions, pageRequest).getContent();
+
+        if (events.isEmpty()) {
+            return new ArrayList<>();
         }
 
-        if (SortValues.VIEWS.name().equals(sort)) {
-            result.sort(Comparator.comparing(ResponseEventDto::getViews).reversed());
-        } else {
-            result.sort(Comparator.comparing(ResponseEventDto::getEventDate).reversed());
+        List<String> urisList = events
+                .stream()
+                .map(event -> "/events/" + event.getId())
+                .toList();
+
+
+        List<StatDto> statsList = statClient.getStats(events.getFirst().getCreatedOn().minusSeconds(1),
+                LocalDateTime.now(), urisList, false);
+
+        List<EventShortDto> result = events.stream().map(event -> {
+
+                    Optional<StatDto> stat = statsList.stream()
+                            .filter(statsDto -> statsDto.getUri().equals("/events/" + event.getId()))
+                            .findFirst();
+                    return EventMapper.mapToShortDto(event, stat.isPresent() ? stat.get().getHits() : 0L);
+                })
+                .toList();
+        List<EventShortDto> resultList = new ArrayList<>(result);
+
+        switch (inputFilter.getSort()) {
+            case EVENT_DATE -> resultList.sort(Comparator.comparing(EventShortDto::getEventDate));
+            case VIEWS -> resultList.sort(Comparator.comparing(EventShortDto::getViews).reversed());
         }
+
+        var ids = resultList.stream().map(EventShortDto::getId).toList();
+        Map<Long, List<Request>> confirmedRequests = requestService.prepareConfirmedRequests(ids);
+
+        resultList.forEach(r -> {
+            var requests = confirmedRequests.get(r.getId());
+
+            r.setConfirmedRequests(requests != null ? requests.size() : 0);
+        });
+
+        try {
+            EndHitDto requestBody = EndHitDto
+                    .builder().app(serviceName)
+                    .ip(httpServletRequest.getRemoteAddr())
+                    .uri(httpServletRequest.getRequestURI())
+                    .timestamp(LocalDateTime.now())
+                    .build();
+            statClient.saveHit(requestBody);
+            log.info("Сохранение статистики.");
+        } catch (SaveStatsException e) {
+            log.error("Не удалось сохранить статистику.");
+        }
+
+        return resultList;
+    }
+
+    @Override
+    public EventFullDto getPublicEventById(HttpServletRequest httpServletRequest, Long id) {
+
+        Event event = eventRepository.findById(id).orElseThrow(
+                () -> new NotFoundRecordInBDException(String.format("Не найдено событие в БД с ID = %d.", id)));
+
+        if (event.getState() != State.PUBLISHED)
+            throw new NotFoundException("Посмотреть можно только опубликованное событие.");
+
+
+        Optional<StatDto> stat = statClient.getStats(event.getCreatedOn().minusSeconds(1),
+                LocalDateTime.now(), List.of("/events/" + event.getId()), true).stream().findFirst();
+
+        EventFullDto result = EventMapper.mapToFullDto(event, stat.isPresent() ? stat.get().getHits() : 0L);
+
+        List<Request> confirmedRequests = requestService
+                .prepareConfirmedRequests(List.of(event.getId())).get(event.getId());
+        result.setConfirmedRequests(confirmedRequests != null ? confirmedRequests.size() : 0);
+
+        try {
+            EndHitDto requestBody = EndHitDto
+                    .builder().app(serviceName)
+                    .ip(httpServletRequest.getRemoteAddr())
+                    .uri(httpServletRequest.getRequestURI())
+                    .timestamp(LocalDateTime.now())
+                    .build();
+
+            statClient.saveHit(requestBody);
+            log.info("Сохранение статистики.");
+        } catch (SaveStatsException e) {
+            log.error("Не удалось сохранить статистику.");
+        }
+
         return result;
     }
 
     @Override
-    @Transactional
-    public ResponseEventDto changeEventByAdmin(long eventId, PatchEventDto patch) {
-        Event stored = eventRepository.findById(eventId)
-                .orElseThrow(() -> new NotFoundException("Event not found"));
-
-        if (patch.getEventDate() != null) {
-            validateFutureDate(patch.getEventDate());
-            stored.setEventDate(patch.getEventDate());
-        }
-
-        if (patch.getCategory() != null) {
-            Category category = categoryRepository.findById(patch.getCategory())
-                    .orElseThrow(() -> new NotFoundException("Category not found"));
-            stored.setCategory(category);
-        }
-
-        if (patch.getLocation() != null) {
-            Location location = locationRepository.save(
-                    EventMapperNew.mapToLocation(patch.getLocation()));
-            stored.setLocation(location);
-        }
-
-        if (patch.getAnnotation() != null) {
-            stored.setAnnotation(patch.getAnnotation());
-        }
-        if (patch.getDescription() != null) {
-            stored.setDescription(patch.getDescription());
-        }
-        if (patch.getPaid() != null) {
-            stored.setPaid(patch.getPaid());
-        }
-        if (patch.getParticipantLimit() != null) {
-            stored.setParticipantLimit(patch.getParticipantLimit());
-        }
-        if (patch.getRequestModeration() != null) {
-            stored.setRequestModeration(patch.getRequestModeration());
-        }
-        if (patch.getTitle() != null) {
-            stored.setTitle(patch.getTitle());
-        }
-
-        applyStateAction(patch.getStateAction(), stored.getState(), stored);
-
-        Event updatedEvent = eventRepository.save(stored);
-        return EventMapperNew.mapToResponseEventDto(updatedEvent);
-    }
-
-
-    @Transactional
-    public ResponseEventDto cancelEventByAdmin(long eventId) {
-        Event event = eventRepository.findById(eventId)
-                .orElseThrow(EntityNotFoundException::new);
-
-        if (Statuses.PUBLISHED.name().equals(event.getState())) {
-            throw new ConflictException("Published event cannot be cancelled");
-        }
-
-        event.setState(Statuses.CANCELED.name());
-        return EventMapperNew.mapToResponseEventDto(eventRepository.saveAndFlush(event));
-    }
-
-    @Override
-    public Collection<ResponseEventDto> findEventsByAdmin(List<Long> users,
-                                                          List<String> states,
-                                                          List<Long> categories,
-                                                          LocalDateTime rangeStart,
-                                                          LocalDateTime rangeEnd,
-                                                          Integer from,
-                                                          Integer size) {
-
-        List<Long> ids = users == null || users.isEmpty() ? List.of(0L) : users;
-        List<String> st = states == null || states.isEmpty() ? List.of("0") : states;
-        List<Long> cats = categories == null || categories.isEmpty() ? List.of(0L) : categories;
-
-        int pageFrom = from == null ? 0 : from;
-        int pageSize = (size == null || size <= 0) ? 10 : size;
-        PageRequest page = PageRequest
-                .of(pageFrom > 0 ? pageFrom / pageSize : 0, pageSize);
-
-        LocalDateTime start = rangeStart != null ? rangeStart : LocalDateTime.now().minusYears(1);
-        LocalDateTime end = rangeEnd != null ? rangeEnd : LocalDateTime.now().plusYears(1);
-
-        if (start.isAfter(end)) {
-            throw new BadRequestException("Дата начала должна быть раньше даты окончания");
-        }
-
-        List<ResponseEventDto> result = new ArrayList<>();
-
-        if (!ids.equals(List.of(0L))) {
-            if (!st.equals(List.of("0"))) {
-                if (!cats.equals(List.of(0L))) {
-                    result.addAll(EventMapperNew
-                            .mapToResponseEventDto(eventRepository
-                                    .findUsersStatesCategories(
-                                            ids, st, cats, start, end, page)));
-                } else {
-                    result.addAll(EventMapperNew
-                            .mapToResponseEventDto(eventRepository
-                                    .findUsersStates(
-                                            ids, st, start, end, page)));
-                }
-            } else {
-                if (!cats.equals(List.of(0L))) {
-                    result.addAll(EventMapperNew
-                            .mapToResponseEventDto(eventRepository
-                                    .findUsersCategories(
-                                            ids, cats, start, end, page)));
-                } else {
-                    result.addAll(EventMapperNew
-                            .mapToResponseEventDto(eventRepository
-                                    .findUsersEvents(
-                                            ids, start, end, page)));
-                }
-            }
+    public List<EventFullDto> getEventsForAdmin(EventAdminFilter input) {
+        Sort sort = Sort.by("createdOn");
+        Pageable pageable = PageRequest.of(input.getFrom() / input.getSize(), input.getSize(), sort);
+        BooleanExpression conditions;
+        if (input.getRangeStart() == null && input.getRangeEnd() == null) {
+            conditions = QEvent.event.eventDate.after(LocalDateTime.now());
         } else {
-            if (!st.equals(List.of("0"))) {
-                if (!cats.equals(List.of(0L))) {
-                    result.addAll(EventMapperNew
-                            .mapToResponseEventDto(eventRepository
-                                    .findStatesCategories(
-                                            st, cats, start, end, page)));
-                } else {
-                    result.addAll(EventMapperNew
-                            .mapToResponseEventDto(eventRepository
-                                    .findStates(
-                                            st, start, end, page)));
-                }
-            } else {
-                if (!cats.equals(List.of(0L))) {
-                    result.addAll(EventMapperNew
-                            .mapToResponseEventDto(eventRepository
-                                    .findCategories(
-                                            cats, start, end, page)));
-                } else {
-                    result.addAll(EventMapperNew
-                            .mapToResponseEventDto(eventRepository
-                                    .findByDateRange(
-                                            start, end, page)));
-                }
-            }
+            conditions = QEvent.event.eventDate.after(input.getRangeStart())
+                    .and(QEvent.event.eventDate.before(input.getRangeEnd()));
         }
+        if (input.getUsers() != null) {
+            conditions = conditions.and(QEvent.event.initiator.id.in(input.getUsers()));
+        }
+        if (input.getStates() != null) {
+            conditions = conditions.and(QEvent.event.state.in(input.getStates()));
+        }
+        if (input.getCategories() != null) {
+            conditions = conditions.and(QEvent.event.category.id.in(input.getCategories()));
+        }
+        List<Event> events = eventRepository.findAll(conditions, pageable).getContent();
+
+        List<String> urisList = events
+                .stream()
+                .map(event -> "/events/" + event.getId())
+                .toList();
+
+        String uris = String.join(", ", urisList);
+
+        List<StatDto> statsList = statClient.getStats(events.getFirst().getCreatedOn().minusSeconds(1),
+                LocalDateTime.now(), urisList, false);
+        var ids = events.stream().map(Event::getId).toList();
+        Map<Long, List<Request>> confirmedRequests = requestService.prepareConfirmedRequests(ids);
+
+        return events.stream().map(event -> {
+
+                    Optional<StatDto> stat = statsList.stream()
+                            .filter(statsDto -> statsDto.getUri().equals("/events/" + event.getId()))
+                            .findFirst();
+                    var requests = confirmedRequests.get(event.getId());
+                    var r = EventMapper.mapToFullDto(event, stat.isPresent() ? stat.get().getHits() : 0L);
+
+                    r.setConfirmedRequests(requests != null ? requests.size() : 0);
+                    return r;
+                })
+                .toList();
+    }
+
+    @Transactional
+    @Override
+    public EventFullDto updateEventAdmin(Long eventId, UpdateEventAdminRequest updateEventAdminRequest) {
+
+        Event event = eventRepository.findById(eventId).orElseThrow(
+                () -> new NotFoundRecordInBDException(String.format("Не найдено событие в БД с ID = %d.", eventId)));
+
+        checkStateAction(event, updateEventAdminRequest);
+
+        if (updateEventAdminRequest.getAnnotation() != null && !updateEventAdminRequest.getAnnotation().isBlank()) {
+            event.setAnnotation(updateEventAdminRequest.getAnnotation());
+        }
+        if (updateEventAdminRequest.getCategory() != null) {
+            event.getCategory().setId(updateEventAdminRequest.getCategory());
+        }
+        if (updateEventAdminRequest.getDescription() != null && !updateEventAdminRequest.getDescription().isBlank()) {
+            event.setDescription(updateEventAdminRequest.getDescription());
+        }
+        if (updateEventAdminRequest.getEventDate() != null) {
+            checkDateEvent(updateEventAdminRequest.getEventDate());
+            event.setEventDate(updateEventAdminRequest.getEventDate());
+        }
+        if (updateEventAdminRequest.getLocation() != null) {
+            event.setLat(updateEventAdminRequest.getLocation().getLat());
+            event.setLon(updateEventAdminRequest.getLocation().getLon());
+        }
+        if (updateEventAdminRequest.getPaid() != null) {
+            event.setPaid(updateEventAdminRequest.getPaid());
+        }
+        if (updateEventAdminRequest.getCommenting() != null) {
+            event.setCommenting(updateEventAdminRequest.getCommenting());
+        }
+        if (updateEventAdminRequest.getParticipantLimit() != null) {
+            event.setParticipantLimit(updateEventAdminRequest.getParticipantLimit());
+        }
+        if (updateEventAdminRequest.getRequestModeration() != null) {
+            event.setRequestModeration(updateEventAdminRequest.getRequestModeration());
+        }
+        if (StateAction.REJECT_EVENT.equals(updateEventAdminRequest.getStateAction())) {
+            event.setState(State.CANCELED);
+        }
+        if (StateAction.CANCEL_REVIEW.equals(updateEventAdminRequest.getStateAction())) {
+            event.setState(State.CANCELED);
+        }
+        if (StateAction.SEND_TO_REVIEW.equals(updateEventAdminRequest.getStateAction())) {
+            event.setState(State.PENDING);
+        }
+        if (StateAction.PUBLISH_EVENT.equals(updateEventAdminRequest.getStateAction())) {
+            event.setState(State.PUBLISHED);
+            event.setPublishedOn(LocalDateTime.now());
+        }
+        if (updateEventAdminRequest.getTitle() != null && !updateEventAdminRequest.getTitle().isBlank()) {
+            event.setTitle(updateEventAdminRequest.getTitle());
+        }
+        event = eventRepository.save(event);
+
+        Optional<StatDto> stat = statClient.getStats(event.getCreatedOn().minusSeconds(1), LocalDateTime.now(),
+                List.of("/events/" + event.getId()), false).stream().findFirst();
+
+        EventFullDto result = EventMapper.mapToFullDto(event, stat.isPresent() ? stat.get().getHits() : 0L);
+
+        List<Request> confirmedRequests = requestService
+                .prepareConfirmedRequests(List.of(event.getId())).get(event.getId());
+        result.setConfirmedRequests(confirmedRequests != null ? confirmedRequests.size() : 0);
+
         return result;
     }
 
     @Override
-    public Collection<ResponseEventDto> getUserEvents(long userId, int from, int size) {
-        return getAllUserEvents(userId, from, size);
-    }
-
-    @Override
-    public ResponseEventDto getUserEventById(long userId, long eventId) {
-        Event event = eventRepository
-                .findByIdAndInitiatorId(eventId, userId)
-                .orElseThrow(() ->
-                        new NotFoundException("Event id=" + eventId + " not found for user " + userId));
-        return EventMapperNew.mapToResponseEventDto(event);
-    }
-
-    @Override
-    public Collection<ResponseEventDto> findEvents(String text,
-                                                   List<Long> categories,
-                                                   Boolean paid,
-                                                   LocalDateTime rangeStart,
-                                                   LocalDateTime rangeEnd,
-                                                   Boolean onlyAvailable,
-                                                   String sort,
-                                                   Integer from,
-                                                   Integer size,
-                                                   HttpServletRequest request) {
-
-        if (rangeStart != null && rangeEnd != null && rangeEnd.isBefore(rangeStart)) {
-            throw new BadRequestException("rangeEnd must be after rangeStart");
+    public List<RequestDto> getRequestsOfUserEvent(Long userId, Long eventId) {
+        if (!userRepository.existsById(userId)) {
+            throw new NotFoundException("Пользователь не найден");
         }
-        return findEventsByUser(text, categories, paid, rangeStart, rangeEnd,
-                onlyAvailable, sort, from, size);
+        Event event = eventRepository.findById(eventId).orElseThrow(() -> new NotFoundException("Событие не найдено"));
+        if (!Objects.equals(event.getInitiator().getId(), userId)) {
+            log.error("userId отличается от id создателя события");
+            throw new ValidationException("Событие должно быть создано текущим пользователем");
+        }
+        return RequestMapper
+                .toParticipationRequestDto(requestRepository.findAllByEventInitiatorIdAndEventId(userId, eventId));
     }
 
     @Override
     @Transactional
-    public ResponseEventDto getPublicEvent(long eventId, HttpServletRequest request) {
-
-        Event event = eventRepository
-                .findByIdAndState(eventId, Statuses.PUBLISHED.name())
-                .orElseThrow(() -> new NotFoundException("Published event not found"));
-
-        String ip = Optional.ofNullable(request.getHeader("X-Forwarded-For"))
-                .orElse(request.getRemoteAddr());
-
-        VIEWS_IP_CACHE.computeIfAbsent(eventId, k -> ConcurrentHashMap.newKeySet());
-
-        if (VIEWS_IP_CACHE.get(eventId).add(ip)) {
-            event.setViews(event.getViews() + 1);
-            eventRepository.saveAndFlush(event);
+    public EventRequestStatusUpdateResult updateRequestsStatus(EventRequestStatusUpdateRequest updateRequest,
+                                                               Long userId, Long eventId) {
+        if (!userRepository.existsById(userId)) {
+            throw new NotFoundException("Пользователь не найден");
         }
-
-        return EventMapperNew.mapToResponseEventDto(event);
-    }
-
-    @Override
-    public Collection<ResponseEventDto> findAdminEvents(List<Long> users,
-                                                        List<String> states,
-                                                        List<Long> categories,
-                                                        LocalDateTime rangeStart,
-                                                        LocalDateTime rangeEnd,
-                                                        Integer from,
-                                                        Integer size) {
-        return findEventsByAdmin(users, states, categories, rangeStart, rangeEnd, from, size);
-    }
-
-    @Override
-    @Transactional
-    public ResponseEventDto createEvent(long userId, NewEventDto dto) {
-
-        validateFutureDate(dto.getEventDate());
-
-        PatchEventDto patch = new PatchEventDto(
-                dto.getAnnotation(),
-                dto.getCategory(),
-                dto.getDescription(),
-                dto.getEventDate(),
-                dto.getLocation(),
-                dto.getPaid(),
-                dto.getParticipantLimit(),
-                dto.getRequestModeration(),
-                null,
-                dto.getTitle(),
-                null,  // requestIds
-                null);   // status;
-
-        EventDto created = createEvent(userId, patch);
-        Event entity = eventRepository
-                .findById(created.getId())
-                .orElseThrow(() ->
-                        new NotFoundException("Event not found after creation"));
-
-        return EventMapperNew.mapToResponseEventDto(entity);
-    }
-
-    private void validateFutureDate(LocalDateTime target) {
-        if (target == null) {
-            return;
+        Event event = eventRepository.findById(eventId).orElseThrow(() -> new NotFoundException("Событие не найдено"));
+        if (!Objects.equals(event.getInitiator().getId(), userId)) {
+            throw new ValidationException("Событие должно быть создано текущим пользователем");
         }
-        LocalDateTime limit = LocalDateTime.now()
-                .plusHours(2)
-                .truncatedTo(ChronoUnit.SECONDS);
-        if (!target.isAfter(limit)) {
-            throw new BadRequestException("eventDate must be at least 2 hours in the future");
+        if (Objects.equals(event.getConfirmedRequests(), event.getParticipantLimit())) {
+            throw new ConflictDataException("Лимит участников уже исчерпан");
         }
-    }
-
-    private void applyStateAction(String stateAction, String prevState, Event updated) {
-        if (stateAction == null) {
-            return;
+        List<Long> requestIds = updateRequest.getRequestIds();
+        log.info("Получили список id запросов на участие: {}", requestIds);
+        List<Request> requestList = requestRepository.findAllById(requestIds);
+        if (requestList.stream().anyMatch(request -> !Objects.equals(request.getEvent().getId(), eventId))) {
+            throw new ValidationException("Все запросы должны принадлежать одному событию");
         }
-
-        switch (stateAction) {
-            case "PUBLISH_EVENT" -> {
-                if (Statuses.PUBLISHED.name().equals(prevState)) {
-                    throw new ConflictException("Event already published");
-                }
-                if (Statuses.CANCELED.name().equals(prevState)) {
-                    throw new ConflictException("Cannot publish canceled event");
-                }
-                updated.setState(Statuses.PUBLISHED.name());
-                updated.setPublishedOn(LocalDateTime.now());
+        List<Request> confirmedRequestsList = new ArrayList<>();
+        List<Request> rejectedRequests = new ArrayList<>();
+        if (event.getRequestModeration() && event.getParticipantLimit() != 0) {
+            switch (updateRequest.getStatus()) {
+                case CONFIRMED -> requestList.forEach(request -> {
+                    if (request.getStatus() != Status.PENDING) {
+                        throw new ConflictDataException("Можно изменить только статус PENDING");
+                    }
+                    if (Objects.equals(event.getConfirmedRequests(), event.getParticipantLimit())) {
+                        request.setStatus(Status.REJECTED);
+                        rejectedRequests.add(request);
+                    } else {
+                        request.setStatus(Status.CONFIRMED);
+                        Integer confirmedRequests = event.getConfirmedRequests();
+                        event.setConfirmedRequests(++confirmedRequests);
+                        confirmedRequestsList.add(request);
+                    }
+                });
+                case REJECTED -> requestList.forEach(request -> {
+                    if (request.getStatus() != Status.PENDING) {
+                        throw new ConflictDataException("Можно изменить только статус PENDING");
+                    }
+                    request.setStatus(Status.REJECTED);
+                    rejectedRequests.add(request);
+                });
             }
-            case "CANCEL_REVIEW", "REJECT_EVENT" -> {
-                if (Statuses.PUBLISHED.name().equals(prevState)) {
-                    throw new ConflictException("Cannot cancel published event");
-                }
-                updated.setState(Statuses.CANCELED.name());
-            }
-            case "SEND_TO_REVIEW" -> updated.setState(Statuses.PENDING.name());
-            default -> log.warn("Unknown state action: {}", stateAction);
+        }
+
+        return new EventRequestStatusUpdateResult(confirmedRequestsList.stream()
+                .map(RequestMapper::toParticipationRequestDto)
+                .toList(), rejectedRequests.stream().map(RequestMapper::toParticipationRequestDto)
+                .toList());
+    }
+
+    private void checkFields(NewEventDto dto) {
+        if (dto.getEventDate().isBefore(LocalDateTime.now().plusHours(2))) {
+            throw new ValidationException("Дата начала события должна быть позже чем через 2 часа от текущего времени");
+        }
+
+        if (dto.getPaid() == null) {
+            dto.setPaid(false);
+        }
+        if (dto.getRequestModeration() == null) {
+            dto.setRequestModeration(true);
+        }
+        if (dto.getParticipantLimit() == null) {
+            dto.setParticipantLimit(0);
         }
     }
 
-    private PageRequest createPageRequest(Integer from, Integer size) {
-        int pageNumber = from == null ? 0 : Math.max(from, 0);
-        int pageSize = size == null ? 10 : Math.max(size, 0);
-        return PageRequest.of(pageNumber, pageSize);
+    private void checkDateEvent(LocalDateTime newDateTime) {
+
+        LocalDateTime now = LocalDateTime.now().plusHours(1);
+        if (now.isAfter(newDateTime)) {
+            throw new InvalidDateTimeException(String.format("Дата начала события должна быть позже текущего времени на %s ч.", 1));
+        }
     }
 
-    private long fetchViews(String uri, boolean unique) {
-        String now = LocalDateTime.now().format(DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss"));
-        LocalDateTime start = LocalDateTime.parse("2000-01-01 00:00:00");
-        return statsClient.getStats(start, LocalDateTime.parse(now), List.of(uri), unique)
-                .stream()
-                .findFirst()
-                .map(StatDto::getHits)
-                .orElse(0L);
+    private void checkStateAction(Event oldEvent, UpdateEventAdminRequest newEvent) {
+
+        if (newEvent.getStateAction() == StateAction.PUBLISH_EVENT) {
+            if (oldEvent.getState() != State.PENDING) {
+                throw new OperationFailedException("Невозможно опубликовать событие. Его можно " +
+                        "опубликовать только в состоянии ожидания публикации.");
+            }
+        }
+        if (newEvent.getStateAction() == StateAction.REJECT_EVENT) {
+            if (oldEvent.getState() == State.PUBLISHED) {
+                throw new OperationFailedException("Событие опубликовано, поэтому отменить его невозможно.");
+            }
+        }
     }
+
 }
